style: add gradient background in global css

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,12 @@
   border: 0;
   box-sizing: border-box;
 }
+body{
+  background-color: rgb(2,0,36);
+  background: linear-gradient(
+    90deg,
+    rgba(2,0,36,1) 0%,
+    rgba(0,13,36,1) 35%,
+    rgba(9,9,121,1)100%,
+    );
+}
