feat: created component card and menu-bar

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,13 @@
-<p>menu-bar works!</p>
+<div class="menu-bar_container">
+  <div class="menu-bar_logo">
+    <img src="" alt="">
+  </div>
+  <div class="menu-bar_item">
+   <ul>
+    <li><a href="">YOUTUBE</a></li>
+    <li><a href=""></a>LINKEDIN</li>
+    <li><a href=""></a>GITHUB</li>
+   </ul>
+
+  </div>
+</div>
