--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -5,5 +5,36 @@
   z-index: 999;
   background-color: #ffff;
   width: 100%;
+  height: 40px;
+  box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
 
+}
+.menu-bar_logo{
+  margin-left: 30px;
+  display: flex;
+  align-items: center;
+}
+.menu-bar_item{
+  display: flex;
+  margin: auto;
+  align-items: center;
+}
+.menu-bar_item >ul{
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+}
+.menu-bar_item >ul >li{
+  padding: 5px;
+  margin-right: 15px;
+}
+.menu-bar_item >ul >li >a{
+text-decoration: none;
+color: black;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+padding: 5px;
+}
+.menu-bar_item >ul >li >a:hover{
+  color: blue;
+  font-weight: 600;
 }
