--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,12 +1,12 @@
 <div class="menu-bar_container">
   <div class="menu-bar_logo">
-    <img src="" alt="">
+    <img src="../../../assets/ps-logo.png" alt="logo" width="140px" height="32px">
   </div>
   <div class="menu-bar_item">
    <ul>
     <li><a href="">YOUTUBE</a></li>
-    <li><a href=""></a>LINKEDIN</li>
-    <li><a href=""></a>GITHUB</li>
+    <li><a href="">LINKEDIN</a></li>
+    <li><a href="">GITHUB</a></li>
    </ul>
 
   </div>
