feat: created card-label component

--- a/src/app/components/card/card-label/card-label.component.html
+++ b/src/app/components/card/card-label/card-label.component.html
@@ -1,1 +1,5 @@
-<p>card-label works!</p>
+<div class="card-label_container">
+  <div class="card-label_content">
+    <p>{{gameLabel}}</p>
+  </div>
+</div>
