--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,3 +1,6 @@
 <a class="card_container" href="#">
   <img class="card_img" src="../../../assets/bt-5.jpg" alt="">
+  <app-card-label
+  gameLabel="Exclusive"
+  ></app-card-label>
 </a>
