--- a/src/app/components/card/card-pricing/card-pricing.component.html
+++ b/src/app/components/card/card-pricing/card-pricing.component.html
@@ -1,1 +1,16 @@
-<p>card-pricing works!</p>
+<div class="card-pricing_container">
+  <div class="card-pricing_title">
+    <h3>Play it Now</h3>
+  </div>
+  <div class="card-pricing_value">
+    <div class="card-pricing_value_console">
+      <span>|</span>
+      <p>{{gameType}}</p>
+    </div>
+    <div class="card-pricing_value_money">
+      <p class="game-price">{{gamePrice}}</p>
+    </div>
+
+
+  </div>
+</div>
