--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,6 @@
+.home{
+  display: flex;
+}
 .home_container{
   width: 90%;
   margin: auto;
@@ -6,4 +9,7 @@
   justify-content: space-around;
   align-items: baseline;
   flex-wrap: wrap;
+
+
 }
+
