--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,27 +1,11 @@
-<div class="home_container">
-  <app-card
-  gameCover="assets/bt-1.jpg"
-  gameLabel="EXCLUSIVO"
-  gameType="DIGITAL | PS4"
-  gamePrice="R$: 129,90"
-  ></app-card>
-  <app-card
-  gameCover="assets/bt-4.jpg"
-  gameLabel="EXCLUSIVO"
-  gameType="DISC | PS4"
-  gamePrice="R$: 229,90"
-  >
-</app-card>
-  <app-card
-  gameCover="assets/bt-5.jpg"
-  gameLabel="DIGITAL"
-  gameType="DIGITAL | PS5"
-  gamePrice="R$: 329,99"
-  >
-</app-card>
 
-
-
-
-
+<div class="home">
+  <div class="home_container" *ngFor="let card of cardData">
+    <app-card
+    gameCover={{card.photo}}
+    gameLabel={{card.label}}
+    gameType={{card.price}}
+    gamePrice={{card.price}}
+    ></app-card>
+  </div>
 </div>
