feat:update dataFake and add link to cards

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<a class="card_container" href="#">
+<a class="card_container" [href]="[gameLink]" target="_blank">
   <img class="card_img" [src]=[gameCover] alt="photo">
   <app-card-label
   gameLabel="{{gameLabel}}">
