--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,9 +2,10 @@
 <div class="home">
   <div class="home_container" *ngFor="let card of cardData">
     <app-card
+    gameLink="{{card.linkToVisit}}"
     gameCover={{card.photo}}
     gameLabel={{card.label}}
-    gameType={{card.price}}
+    gameType={{card.type}}
     gamePrice={{card.price}}
     ></app-card>
   </div>
