--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -4,9 +4,18 @@
   </div>
   <div class="menu-bar_item">
    <ul>
-    <li><a href="">YOUTUBE</a></li>
-    <li><a href="">LINKEDIN</a></li>
-    <li><a href="">GITHUB</a></li>
+    <li>
+      <img src="../../../assets/psn-icon" alt="logo-psn">
+      <a href="">PSN STORE</a>
+    </li>
+    <li>
+      <img src="../../../assets/linkedin-logo.png" alt="logo-linkedin">
+      <a href="">LINKEDIN</a>
+    </li>
+    <li>
+      <img src="../../../assets/github-logo.png" alt="">
+      <a href="">GITHUB</a>
+    </li>
    </ul>
 
   </div>
