feat:add add menu bar links

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -6,15 +6,21 @@
    <ul>
     <li>
       <img src="../../../assets/psn-icon" alt="logo-psn">
-      <a href="">PSN STORE</a>
+      <a href="https://store.playstation.com/pt-br/pages/latest" target="_blank">
+        PS STORE
+      </a>
     </li>
     <li>
       <img src="../../../assets/linkedin-logo.png" alt="logo-linkedin">
-      <a href="">LINKEDIN</a>
+      <a href="https://www.linkedin.com/in/fabianaignacio/" target="_blank">
+        LINKEDIN
+      </a>
     </li>
     <li>
-      <img src="../../../assets/github-logo.png" alt="">
-      <a href="">GITHUB</a>
+      <img src="../../../assets/github-logo.png" alt="logo-github">
+      <a href="https://github.com/Ignacio-fabianamaria" target="_blank">
+        GITHUB
+      </a>
     </li>
    </ul>
 
