--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -5,7 +5,7 @@
   z-index: 999;
   background-color: #ffff;
   width: 100%;
-  height: 40px;
+  height: 50px;
   box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
 
 }
@@ -30,6 +30,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.2rem;
 }
 .menu-bar_item >ul >li >img{
   width: 20px;
