--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
 
 <div class="home">
+  <img src="../../../assets/left_icon-.svg" class="home_img-left" alt="left_icon">
+<div class="home-carossel_container">
   <div class="home_container" *ngFor="let card of cardData">
     <app-card
     gameLink="{{card.linkToVisit}}"
@@ -9,5 +11,6 @@
     gamePrice={{card.price}}
     ></app-card>
   </div>
-  
+</div>
+<img src="../../../assets/right_icon.svg" class="home_img-right" alt="right_icon">
 </div>
